--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">votr</string>
     <string name="title_activity_polling_location">Polling Location</string>
+    <string name="open_fec_api_key">qUQlqMRieFbHMXQkRcxvRT5vjubdzIpbuVlYglIY</string>
+    <string name="city_placeholder_text">City</string>
 </resources>
